--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
+vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.return-url=http://localhost:8081/vnpay/return
+vnpay.tmn-code=RPIBWBE3
+vnpay.secret-key=EOR8BZHFQU7TX9PFQ2F1ZTVS5A79PYIW
 
 
 
