feat: staff & report

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dom?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=dpnm16704
+spring.datasource.password=581581
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate settings
