--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dom?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=hung2132004
+spring.datasource.password=dpnm16704
 #spring.datasource.password=dpnm16704
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
