--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,8 @@ vnpay.return-url=http://localhost:8081/vnpay/return
 vnpay.tmn-code=RPIBWBE3
 vnpay.secret-key=EOR8BZHFQU7TX9PFQ2F1ZTVS5A79PYIW
 
+jwt.secret=defaultSecretKeyPleaseChangeInProductionEnvironment
+
+
 
 
